Name: dhall-python
Version: 1.2.5
Cabal-Version: >=1.8.0.2
Build-Type: Simple
Tested-With: GHC == 7.10.2, GHC == 8.0.1
License: BSD3
License-File: LICENSE
Copyright: 2017 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/dhall-lang/dhall-haskell/issues
Synopsis: Compile Dhall to Python
Description:
    Use this package if you want to compile Dhall expressions to Python.
    You can use this package as a library or an executable:
    .
    * See the "Dhall.Python" module if you want to use this package as a library
    .
    * Use the @dhall-to-python program from this package if
      you want an executable
    .
    The "Dhall.Python" module also contains instructions for how to use this
    package
Category: Compiler
Extra-Source-Files:
    CHANGELOG.md
    tasty/data/*.dhall
    tasty/data/*.py
Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-python

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                      >= 4.8.0.0  && < 5   ,
        dhall                     >= 1.19.0   && < 1.20,
        language-python           >= 0.5.4,
        containers                >= 0.5.11.0,
        optparse-applicative      >= 0.14.0.0 && < 0.15,
        text                      >= 0.11.1.0 && < 1.3 ,
        unordered-containers                     < 0.3
    Exposed-Modules: Dhall.Python
    GHC-Options: -Wall

Executable dhall-to-python
    Hs-Source-Dirs: dhall-to-python
    Main-Is: Main.hs
    Build-Depends:
        base                       ,
        bytestring           < 0.11,
        dhall                      ,
        dhall-python                 ,
        language-python           >= 0.5.4,
        optparse-applicative       ,
        text
    Other-Modules:
        Paths_dhall_python
    GHC-Options: -Wall

Test-Suite tasty
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: tasty
    Main-Is: Main.hs
    Build-Depends:
        base,
        bytestring        ,
        dhall             ,
        dhall-python        ,
        tasty       <  1.3,
        text              ,
        tasty-hunit >= 0.2
